WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94138
[BlackBerry] Show custom error page when 407 is received
https://bugs.webkit.org/show_bug.cgi?id=94138
Summary
[BlackBerry] Show custom error page when 407 is received
otcheung
Reported
2012-08-15 12:37:54 PDT
Currently, BB browser prompts the user for new credentials when 407 is received. UX change, we now show a custom 407 error page that asks the user to go into settings to change their wifi proxy credentials.
Attachments
Patch
(4.94 KB, patch)
2012-08-15 13:44 PDT
,
otcheung
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
otcheung
Comment 1
2012-08-15 13:44:22 PDT
Created
attachment 158632
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-15 15:43:07 PDT
Comment on
attachment 158632
[details]
Patch Clearing flags on attachment: 158632 Committed
r125718
: <
http://trac.webkit.org/changeset/125718
>
WebKit Review Bot
Comment 3
2012-08-15 15:43:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug